PL3/antlr/gramaticas/gPseudocodigoParser.java
// Generated from .\gPseudocodigoParser.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gPseudocodigoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FIN=1, INI=2, DEFINIR=3, COMO=4, FLECHA=5, DIMENSION=6, LEER=7, ESCRIBIR=8, 
		CIERRASI=9, SINO=10, ENTONCES=11, SI=12, DEOTROMODO=13, FINSEGUN=14, SEGUN=15, 
		HACER=16, FINMIENTRAS=17, MIENTRAS=18, REPETIR=19, HASTAQUE=20, FINPARA=21, 
		PARA=22, HASTA=23, CONPASO=24, FUNCION=25, FINFUNCION=26, MAYORQUE=27, 
		MENORQUE=28, IGUALQUE=29, MENORIGUALQUE=30, MAYORIGUALQUE=31, CONJUNCION=32, 
		DISYUNCION=33, NEGACION=34, SUMA=35, RESTA=36, MULTIPLICACION=37, DIVISION=38, 
		POTENCIACION=39, MODULO=40, COMA=41, BARRABAJA=42, RC=43, ABS=44, LN=45, 
		EXP=46, SEN=47, COS=48, ATAN=49, TRUNC=50, REDON=51, AZAR=52, TIPO=53, 
		FLOAT=54, INT=55, BOOL=56, STRING=57, PI=58, PD=59, CI=60, CD=61, DOSPUNTOS=62, 
		PUNTOCOMA=63, ID=64, COMENTARIO_LINEA=65, COMENTARIO_BLOQUE=66, WS=67, 
		NEWLINE=68, SPACE=69;
	public static final int
		RULE_prog = 0, RULE_main = 1, RULE_instrucciones = 2, RULE_definir = 3, 
		RULE_asignacion = 4, RULE_entrada = 5, RULE_salidas = 6, RULE_dimensionamiento = 7, 
		RULE_condicional = 8, RULE_sino = 9, RULE_si = 10, RULE_seleccionmultiple = 11, 
		RULE_instruccion = 12, RULE_valor = 13, RULE_deotromodo = 14, RULE_mientras = 15, 
		RULE_repetir = 16, RULE_hastaque = 17, RULE_lazospara = 18, RULE_deffuncion = 19, 
		RULE_cabecera = 20, RULE_retorno = 21, RULE_exprlogica = 22, RULE_expr = 23, 
		RULE_array = 24, RULE_kwinicio = 25, RULE_kwfin = 26, RULE_kwini = 27, 
		RULE_kwdefinir = 28, RULE_kwcomo = 29, RULE_kwflecha = 30, RULE_kwdimension = 31, 
		RULE_kwleer = 32, RULE_kwescribir = 33, RULE_kwcierrasi = 34, RULE_kwsino = 35, 
		RULE_kwentonces = 36, RULE_kwsi = 37, RULE_kwdeotromodo = 38, RULE_kwfinsegun = 39, 
		RULE_kwsegun = 40, RULE_kwhacer = 41, RULE_kwfinmientras = 42, RULE_kwmientras = 43, 
		RULE_kwrepetir = 44, RULE_kwhastaque = 45, RULE_kwfinpara = 46, RULE_kwpara = 47, 
		RULE_kwhasta = 48, RULE_kwconpaso = 49, RULE_kwfuncion = 50, RULE_invocafuncion = 51, 
		RULE_argumentos = 52, RULE_kwfinfuncion = 53, RULE_operadorrel = 54, RULE_operadorlog = 55, 
		RULE_conjuncion = 56, RULE_disyuncion = 57, RULE_negacion = 58, RULE_operadoralge = 59, 
		RULE_igual = 60, RULE_suma = 61, RULE_resta = 62, RULE_multiplicacion = 63, 
		RULE_division = 64, RULE_potenciacion = 65, RULE_modulo = 66, RULE_operadorseparador = 67, 
		RULE_coma = 68, RULE_barrabaja = 69, RULE_funciones = 70, RULE_rc = 71, 
		RULE_abs = 72, RULE_ln = 73, RULE_exp = 74, RULE_sen = 75, RULE_cos = 76, 
		RULE_atan = 77, RULE_trunc = 78, RULE_redon = 79, RULE_azar = 80, RULE_tipo = 81, 
		RULE_real = 82, RULE_entero = 83, RULE_bool = 84, RULE_string = 85, RULE_id = 86, 
		RULE_comentario = 87, RULE_dospuntos = 88, RULE_pi = 89, RULE_pd = 90, 
		RULE_ci = 91, RULE_cd = 92, RULE_puntoycoma = 93;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "main", "instrucciones", "definir", "asignacion", "entrada", 
			"salidas", "dimensionamiento", "condicional", "sino", "si", "seleccionmultiple", 
			"instruccion", "valor", "deotromodo", "mientras", "repetir", "hastaque", 
			"lazospara", "deffuncion", "cabecera", "retorno", "exprlogica", "expr", 
			"array", "kwinicio", "kwfin", "kwini", "kwdefinir", "kwcomo", "kwflecha", 
			"kwdimension", "kwleer", "kwescribir", "kwcierrasi", "kwsino", "kwentonces", 
			"kwsi", "kwdeotromodo", "kwfinsegun", "kwsegun", "kwhacer", "kwfinmientras", 
			"kwmientras", "kwrepetir", "kwhastaque", "kwfinpara", "kwpara", "kwhasta", 
			"kwconpaso", "kwfuncion", "invocafuncion", "argumentos", "kwfinfuncion", 
			"operadorrel", "operadorlog", "conjuncion", "disyuncion", "negacion", 
			"operadoralge", "igual", "suma", "resta", "multiplicacion", "division", 
			"potenciacion", "modulo", "operadorseparador", "coma", "barrabaja", "funciones", 
			"rc", "abs", "ln", "exp", "sen", "cos", "atan", "trunc", "redon", "azar", 
			"tipo", "real", "entero", "bool", "string", "id", "comentario", "dospuntos", 
			"pi", "pd", "ci", "cd", "puntoycoma"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'<-'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'>'", "'<'", "'='", "'<='", "'>='", null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'^'", null, "','", "'_'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'('", "')'", "'['", "']'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FIN", "INI", "DEFINIR", "COMO", "FLECHA", "DIMENSION", "LEER", 
			"ESCRIBIR", "CIERRASI", "SINO", "ENTONCES", "SI", "DEOTROMODO", "FINSEGUN", 
			"SEGUN", "HACER", "FINMIENTRAS", "MIENTRAS", "REPETIR", "HASTAQUE", "FINPARA", 
			"PARA", "HASTA", "CONPASO", "FUNCION", "FINFUNCION", "MAYORQUE", "MENORQUE", 
			"IGUALQUE", "MENORIGUALQUE", "MAYORIGUALQUE", "CONJUNCION", "DISYUNCION", 
			"NEGACION", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "POTENCIACION", 
			"MODULO", "COMA", "BARRABAJA", "RC", "ABS", "LN", "EXP", "SEN", "COS", 
			"ATAN", "TRUNC", "REDON", "AZAR", "TIPO", "FLOAT", "INT", "BOOL", "STRING", 
			"PI", "PD", "CI", "CD", "DOSPUNTOS", "PUNTOCOMA", "ID", "COMENTARIO_LINEA", 
			"COMENTARIO_BLOQUE", "WS", "NEWLINE", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gPseudocodigoParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gPseudocodigoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<MainContext> main() {
			return getRuleContexts(MainContext.class);
		}
		public MainContext main(int i) {
			return getRuleContext(MainContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public List<DeffuncionContext> deffuncion() {
			return getRuleContexts(DeffuncionContext.class);
		}
		public DeffuncionContext deffuncion(int i) {
			return getRuleContext(DeffuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INI || _la==FUNCION || _la==COMENTARIO_LINEA || _la==COMENTARIO_BLOQUE) {
				{
				setState(191);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INI:
					{
					setState(188);
					main();
					}
					break;
				case COMENTARIO_LINEA:
				case COMENTARIO_BLOQUE:
					{
					setState(189);
					comentario();
					}
					break;
				case FUNCION:
					{
					setState(190);
					deffuncion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public KwinicioContext kwinicio() {
			return getRuleContext(KwinicioContext.class,0);
		}
		public KwfinContext kwfin() {
			return getRuleContext(KwfinContext.class,0);
		}
		public List<InstruccionesContext> instrucciones() {
			return getRuleContexts(InstruccionesContext.class);
		}
		public InstruccionesContext instrucciones(int i) {
			return getRuleContext(InstruccionesContext.class,i);
		}
		public List<ComentarioContext> comentario() {
			return getRuleContexts(ComentarioContext.class);
		}
		public ComentarioContext comentario(int i) {
			return getRuleContext(ComentarioContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			kwinicio();
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 3)) & ~0x3f) == 0 && ((1L << (_la - 3)) & ((1L << (DEFINIR - 3)) | (1L << (DIMENSION - 3)) | (1L << (LEER - 3)) | (1L << (ESCRIBIR - 3)) | (1L << (SI - 3)) | (1L << (SEGUN - 3)) | (1L << (MIENTRAS - 3)) | (1L << (REPETIR - 3)) | (1L << (PARA - 3)) | (1L << (RC - 3)) | (1L << (ABS - 3)) | (1L << (LN - 3)) | (1L << (EXP - 3)) | (1L << (SEN - 3)) | (1L << (COS - 3)) | (1L << (ATAN - 3)) | (1L << (TRUNC - 3)) | (1L << (REDON - 3)) | (1L << (AZAR - 3)) | (1L << (FLOAT - 3)) | (1L << (INT - 3)) | (1L << (BOOL - 3)) | (1L << (STRING - 3)) | (1L << (PI - 3)) | (1L << (CI - 3)) | (1L << (ID - 3)) | (1L << (COMENTARIO_LINEA - 3)) | (1L << (COMENTARIO_BLOQUE - 3)))) != 0)) {
				{
				setState(199);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEFINIR:
				case DIMENSION:
				case LEER:
				case ESCRIBIR:
				case SI:
				case SEGUN:
				case MIENTRAS:
				case REPETIR:
				case PARA:
				case RC:
				case ABS:
				case LN:
				case EXP:
				case SEN:
				case COS:
				case ATAN:
				case TRUNC:
				case REDON:
				case AZAR:
				case FLOAT:
				case INT:
				case BOOL:
				case STRING:
				case PI:
				case CI:
				case ID:
					{
					setState(197);
					instrucciones();
					}
					break;
				case COMENTARIO_LINEA:
				case COMENTARIO_BLOQUE:
					{
					setState(198);
					comentario();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(204);
			kwfin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public EntradaContext entrada() {
			return getRuleContext(EntradaContext.class,0);
		}
		public SalidasContext salidas() {
			return getRuleContext(SalidasContext.class,0);
		}
		public DimensionamientoContext dimensionamiento() {
			return getRuleContext(DimensionamientoContext.class,0);
		}
		public SeleccionmultipleContext seleccionmultiple() {
			return getRuleContext(SeleccionmultipleContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public RepetirContext repetir() {
			return getRuleContext(RepetirContext.class,0);
		}
		public LazosparaContext lazospara() {
			return getRuleContext(LazosparaContext.class,0);
		}
		public DefinirContext definir() {
			return getRuleContext(DefinirContext.class,0);
		}
		public PuntoycomaContext puntoycoma() {
			return getRuleContext(PuntoycomaContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitInstrucciones(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instrucciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(206);
				expr(0);
				}
				break;
			case 2:
				{
				setState(207);
				condicional();
				}
				break;
			case 3:
				{
				setState(208);
				asignacion();
				}
				break;
			case 4:
				{
				setState(209);
				entrada();
				}
				break;
			case 5:
				{
				setState(210);
				salidas();
				}
				break;
			case 6:
				{
				setState(211);
				dimensionamiento();
				}
				break;
			case 7:
				{
				setState(212);
				seleccionmultiple();
				}
				break;
			case 8:
				{
				setState(213);
				mientras();
				}
				break;
			case 9:
				{
				setState(214);
				repetir();
				}
				break;
			case 10:
				{
				setState(215);
				lazospara();
				}
				break;
			case 11:
				{
				setState(216);
				definir();
				}
				break;
			}
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTOCOMA) {
				{
				setState(219);
				puntoycoma();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinirContext extends ParserRuleContext {
		public KwdefinirContext kwdefinir() {
			return getRuleContext(KwdefinirContext.class,0);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public KwcomoContext kwcomo() {
			return getRuleContext(KwcomoContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public DefinirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterDefinir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitDefinir(this);
		}
	}

	public final DefinirContext definir() throws RecognitionException {
		DefinirContext _localctx = new DefinirContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definir);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			kwdefinir();
			setState(223);
			id();
			setState(229);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(224);
				coma();
				setState(225);
				id();
				}
				}
				setState(231);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(232);
			kwcomo();
			setState(233);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public KwflechaContext kwflecha() {
			return getRuleContext(KwflechaContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public IgualContext igual() {
			return getRuleContext(IgualContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitAsignacion(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asignacion);
		try {
			setState(243);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(235);
				id();
				setState(236);
				kwflecha();
				setState(237);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(239);
				expr(0);
				setState(240);
				igual();
				setState(241);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntradaContext extends ParserRuleContext {
		public KwleerContext kwleer() {
			return getRuleContext(KwleerContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public EntradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterEntrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitEntrada(this);
		}
	}

	public final EntradaContext entrada() throws RecognitionException {
		EntradaContext _localctx = new EntradaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_entrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(245);
			kwleer();
			setState(246);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SalidasContext extends ParserRuleContext {
		public KwescribirContext kwescribir() {
			return getRuleContext(KwescribirContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SalidasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_salidas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterSalidas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitSalidas(this);
		}
	}

	public final SalidasContext salidas() throws RecognitionException {
		SalidasContext _localctx = new SalidasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_salidas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(248);
			kwescribir();
			setState(249);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimensionamientoContext extends ParserRuleContext {
		public KwdimensionContext kwdimension() {
			return getRuleContext(KwdimensionContext.class,0);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public List<CiContext> ci() {
			return getRuleContexts(CiContext.class);
		}
		public CiContext ci(int i) {
			return getRuleContext(CiContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<CdContext> cd() {
			return getRuleContexts(CdContext.class);
		}
		public CdContext cd(int i) {
			return getRuleContext(CdContext.class,i);
		}
		public KwflechaContext kwflecha() {
			return getRuleContext(KwflechaContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public DimensionamientoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionamiento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).enterDimensionamiento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gPseudocodigoParserListener ) ((gPseudocodigoParserListener)listener).exitDimensionamiento(this);
		}
	}

	public final DimensionamientoContext dimensionamiento() throws RecognitionException {
		DimensionamientoContext _localctx = new DimensionamientoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dimensionamiento);
		try {
			setState(268);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIMENSION:
				enterOuterAlt(_localctx, 1);
				{
				setState(251);
				kwdimension();
				setState(252);
				id();
				setState(253);
				array();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(255);
				id();
				setState(256);
				ci();
				setState(257);
				expr(0);
				setState(258);
				cd();
				setState(259);
				kwflecha();
				setState(266);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(260);
					id();
					setState(261);
					ci();
					setState(262);
					expr(0);
					setState(263);
					cd();
					}
					break;
				case STRING:
					{
					setState(265);
					string();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
